--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,19 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ],
             "styles": [
-              "src/styles.scss"
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "./node_modules/swiper/dist/css/swiper.css",
+              "./src/assets/css/reset.css",
+              "./src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/swiper/dist/js/swiper.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -54,6 +61,15 @@
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
                 }
+              ],
+              "serviceWorker": true
+            },
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
               ]
             }
           }
@@ -66,6 +82,10 @@
           "configurations": {
             "production": {
               "browserTarget": "wonmore:build:production"
+            },
+            "hmr": {
+              "hmr": true,
+              "browserTarget": "wonmore:build:hmr"
             }
           }
         },
@@ -88,7 +108,8 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ]
           }
         },
