--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,10 @@
               "src/manifest.json"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/swiper/dist/css/swiper.css",
               "./src/assets/css/reset.css",
+              "./src/assets/css/font.css",
               "./src/styles.scss"
             ],
             "scripts": [
