--- a/angular.json
+++ b/angular.json
@@ -25,18 +25,19 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.json"
+              "src/manifest.json",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              }
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "./node_modules/swiper/dist/css/swiper.css",
-              "./src/assets/css/reset.css",
-              "./src/assets/css/font.css",
+              "src/theme.less",
               "./src/styles.scss"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.js",
-              "./node_modules/swiper/dist/js/swiper.js"
+              "./node_modules/jquery/dist/jquery.js"
             ]
           },
           "configurations": {
