--- a/package.json
+++ b/package.json
@@ -12,24 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
-    "@angular/cdk": "^7.0.1",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
-    "@angular/material": "^7.0.1",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/pwa": "^0.10.6",
     "@angular/router": "~7.0.0",
     "@angular/service-worker": "~7.0.0",
+    "@types/jquery": "^3.3.29",
     "core-js": "^2.5.4",
-    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
-    "moment": "^2.22.2",
+    "ng-zorro-antd": "^7.0.1",
     "rxjs": "~6.3.3",
-    "swiper": "^4.4.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -40,9 +37,7 @@
     "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.22",
     "@types/node": "^10.12.0",
-    "@types/swiper": "^4.2.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
